<resources>
    <string name="app_name">frontend_android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="projectName">Projekt</string>
    <string name="password">Lösenord</string>
    <string name="p_description">Beskrivning</string>
    <string name="genre">Genre</string>
    <string name="applyProject">Ansök</string>
    <string name="details_project">Se mer</string>
    <string name="error_key">Error</string>
    <string name="error_value">403 - kan ej läsas in</string>
    <string name="username">Användarnamn\n</string>
    <string name="register">Registrera</string>
    <string name="login">Logga in</string>
    <string name="email">Email</string>
    <string name="description">Projektbeskrivning</string>
    <string name="description_value">Beskrivning\n</string>
    <string name="genre_value">Genre</string>
    <string name="create_project">Skapa Projekt</string>
    <string name="close">Stäng</string>
    <string name="openProject">Öppna</string>
    <string name="title">Sökord</string>
    <string name="Search">sök</string>project
    <string name="sender">Avsändare</string>
    <string name="content">Meddelande:</string>
    <string name="send">Skicka meddelande</string>
    <string name="date_key">Datum:</string>
    <string name="name">Namn</string>
    <string name="write">Skicka meddelande</string>
    <string name="recipient_value">Mottagare</string>
    <string name="recipient_key">Mottagare</string>
    <string name="mottagare">Mottagare</string>
    <string name="Roll">"Yrkestitel: "</string>
    <string name="role_value">Skådespelare</string>
    <string name="roleName">Yrkesroll</string>
    <string name="book">Skicka bokningsförfrågan</string>
    <string name="booking">Schema</string>
    <string name="start_value">FRÅN</string>
    <string name="end_value">TILL</string>
    <string name="create">SKAPA</string>
    <string name="title_projects">Projekt</string>
    <string name="title_mypage">Mina projekt</string>
    <string name="title_messenges">Inbox</string>
    <string name="title_users">Användare</string>
    <string name="leave">Lämna</string>
    <string name="chat">Meddelanden</string>
    <string name="settings">Inställning</string>
    <string name="settings_">inställningar</string>
    <string name="start_time">Starttid:</string>
    <string name="c_time">Vald tid:</string>
    <string name="yoe">Erfarenhet (ÅÅ/MM)</string>
    <string name="fname">Förnamn\n</string>
    <string name="eName">Efternamn</string>
    <string name="skapa_projekt">Skapa projekt</string>
    <string name="msg_hint">Innehåll</string>
    <string name="testmessage">Material Design is an adaptable system of guidelines, components, and tools that support the best practices of user interface design. Backed by open-source code, Material Design streamlines collaboration between designers and developers, and helps teams quickly build beautiful products.</string>
    <string name="benjamin">Benjamin Giordano</string>
    <string name="testdate">2025/08/31</string>
    <string name="SearchMember">Sök medlemmar</string>
    <string name="Kick">Kasta ut</string>
    <string name="add_member">Bjud in</string>
    <string name="invite">Inbjudningar</string>
    <string name="remove">Ta bort</string>
    <string name="change">Ändra projekt</string>
    <string name="inv">Bjud in</string>
    <string name="accept">Acceptera</string>
    <string name="deletenotif">Är du säker att du vill ta bort projektet?</string>
    <string name="OnlyMembers">Visa endast medlemmar</string>
    <string name="remove_req">Ta bort inbjudan</string>
    <string name="searchUser">Sök efter användare</string>
    <string name="alexander">Alexander</string>
    <string name="title_requests_projects">Förfrågningar(Projekt)</string>
    <string name="join">Skicka förfrågan att gå med</string>
    <string name="OnlyRequests">Visa mina förfrågningar</string>
    <string name="showReq">Visa förfrågade/inbjudna</string>
    <string name="NoInvittes">Inga förfrågningar eller inbjudningar</string>
    <string name="leave_project">Lämna projekt</string>
    <string name="admin">Admin</string>
    <string name="edit_members">Hantera medlemmar</string>
    <string name="manage_members">Hantera användare</string>
    <string name="deleteProject">Ta bort projekt\n</string>
    <string name="go_invite">Hitta projekt</string>
    <string name="lastname">Giordano</string>
    <string name="firstname">Benjamin</string>
    <string name="myProjects">Mina projekt</string>
    <string name="CreateProject">Skapa projekt</string>
    <string name="noProjects">Du är inte med i några projekt ännu!</string>
    <string name="myInbox">Inbox</string>
    <string name="msg">Mina meddenden</string>
    <string name="convos">Konversationer</string>
    <string name="noMessage">Du har inte kontakt med någon ännu!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Lägg till</string>
    <string name="flik1">Data ett</string>
    <string name="data2">Data två</string>
    <string name="searchTab">Sökflik</string>
    <string name="addeddata">Hämtad data</string>
    <string name="inkluderat">Inkluderat</string>
    <string name="exkluderat">Exkluderat</string>
    <string name="no_data_found">Inget kunde hittas här ännu!</string>
    <string name="Next">Vidare</string>
    <string name="lname">Efternamn</string>
    <string name="rolePick">Välj roll</string>
    <string name="back">Bakåt</string>
    <string name="success_reg">Registreringen lyckades!</string>
    <string name="nav_login_btn">Ta mig till inloggning</string>
    <string name="searchproject">Sök Projekt</string>
    <string name="Requests">Förfrågningar</string>
    <string name="search_hint">Sök eller tryck för alla</string>
    <string name="Filmprojekt">Projects</string>
    <string name="Filmprojeks">Filmprojekt</string>
    <string name="searchMsg">Sök efter förnamn</string>
    <string name="msg_hints">Sök efter titel eller tryck för allt</string>
    <string name="available">Då kan jag jobba\n</string>
    <string name="bookingInvitre">Bokningsförfrågan</string>
    <string name="patchuser">Spara ändringar</string>
    <string name="removeAccount">Ta bort konto</string>
    <string name="currentRole">Nurvarande roll:</string>
    <string name="chose">Välj ny roll:</string>
    <string name="registera">Registrera dig</string>
    <string name="createaccount">Skapa konto</string>
    <string name="canWork">Jobbförfrågningar</string>
    <string name="projectRequest">Projektförfrågningar</string>
    <string name="myRequests">Mina förfrågningar</string>
    <string name="Icanwork">Då kan jag jobba</string>
    <string name="onlyInvites">Inbjudningar</string>
    <string name="events">Händelser</string>
    <string name="onlyAvailable">Då kan jag jobba</string>
    <string name="welcome">Välkommen</string>
    <string name="throw_away">Kasta ut</string>
    <string name="elevate">Gör admin</string>
    <string name="boka">Boka</string>
    <string name="unbook">Avboka</string>
    <string name="bookingTitle">Titel på bokning</string>
    <string name="bookingdesc">Beskrivning av bokning</string>
    <string name="Inbjuden">Added</string>
    <string name="added">Inbjuden</string>
    <string name="addd">Lägg till</string>
    <string name="create_book">Skapa</string>
</resources>