<LinearLayout
    android:id="@+id/user_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/project_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/projectName"
        android:inputType="text"
        android:layout_marginBottom="16dp">
    </EditText>

    <EditText
        android:id="@+id/name_key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_marginBottom="16dp">
    </EditText>

    <EditText
        android:id="@+id/description_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_value"
        android:inputType="text"
        android:layout_marginBottom="16dp">
    </EditText>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_key"
        android:text="@string/start_value"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold">
    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/end_key"
        android:text="@string/end_value"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold">
    </com.google.android.material.button.MaterialButton>



</LinearLayout>