<LinearLayout android:id="@+id/user_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRequests"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:backgroundTint="#F9F8F8"
            android:textColor="@color/black"
            android:text="@string/myProjects"
            android:textAllCaps="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nav_c_project_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:backgroundTint="#577590"
            android:textColor="@color/white"
            android:text="@string/CreateProject"
            android:textAllCaps="false"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="36dp">

    </LinearLayout>

    <EditText
        android:id="@+id/projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/projectName"
        android:inputType="text"
        android:layout_marginBottom="16dp">
    </EditText>

    <EditText
        android:id="@+id/description_key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/description_value"
        android:inputType="text"
        android:layout_marginBottom="16dp">
    </EditText>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_project_btn"
        android:text="@string/create_project"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_dialog_btn"
        android:text="@string/close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />


</LinearLayout>