<LinearLayout
    android:id="@+id/user_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp">
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp">
    </EditText>


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="16dp">
    </EditText>

</LinearLayout>