<LinearLayout
    android:id="@+id/user_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp">
            <TextView
                android:id="@+id/date_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/date_key"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24/08 14:00 - 21:00"
                android:textSize="16sp"
                android:gravity="end" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/projectName">

        <AutoCompleteTextView
            android:id="@+id/projectDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/roleName">

        <AutoCompleteTextView
            android:id="@+id/roleDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:elevation="4dp">


        <EditText
            android:id="@+id/content_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp">
        </EditText>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground">

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_booking_btn"
            android:text="@string/book"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_dialog_btn"
            android:text="@string/close"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>