<LinearLayout android:id="@+id/message_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:elevation="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mottagare">

        <AutoCompleteTextView
            android:id="@+id/userDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">


        <EditText
            android:id="@+id/content_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:scrollbars="vertical"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:layout_marginBottom="16dp">
        </EditText>
    </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="16dp"
        app:cardCornerRadius="4dp"
        android:background="?android:attr/selectableItemBackground"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp">
            <TextView
                android:id="@+id/name_key"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_msg_btn"
        android:text="@string/send"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_dialog_btn"
        android:text="@string/close"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        />
    </LinearLayout>

</LinearLayout>